clean and update
- choice handlers extracted to separate classes
- menu shown based on roles
- add password validation
- add password requirements
- add login limit